force-app/main/default/objects/FnboLog__c/FnboLog__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the logs.</description>
    <label>FnboLog</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FnboLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FnboLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>