force-app/main/default/objects/FnboLog__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Insert, Update, Delete</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insert, Update, Delete</inlineHelpText>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>