force-app/main/default/objects/FnboLog__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>e.g.CDS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>