force-app/main/default/objects/FnboLog__c/fields/Log_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Detail__c</fullName>
    <description>Log Details</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details of the log will be displayed here.</inlineHelpText>
    <label>Log_Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>