force-app/main/default/objects/FnboLog__c/fields/LogId__c.field-meta.xml
<CustomField>
    <fullName>LogId__c</fullName>
    <description>Auto generated in salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LogId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>