force-app/main/default/objects/FnboLog__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>Salesforce Object Name E.g. Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SObject_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>