force-app/main/default/objects/FnboLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Success. Failure</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Success. Failure</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>